# KomodoOcean

./: .gitignore  0001-macos-build-fix-only-partially.patch  KomodoOceanGUI.pro  Makefile.am  README-dev.md  README.md  build.sh  check_lqminimal.sh  configure.ac  fnr.bat  macos_link_helper.sh  todo.txt
src/: Makefile.am  Makefile.ktest.include  Makefile.leveldb.include  Makefile.qt.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  alertkeys.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  assetchains  assetchains.json  assetchains_stop  asyncrpcoperation.cpp  asyncrpcoperation.h  asyncrpcqueue.cpp  asyncrpcqueue.h  base58.cpp  base58.h  bech32.h  bitcoin-tx-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  bloom.h  bloomfilter.cpp  bloomfilter.h  cJSON.c  cJSON.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  (+171 more)
src/amqp/: amqpabstractnotifier.cpp  amqpabstractnotifier.h  amqpconfig.h  amqpnotificationinterface.cpp  amqpnotificationinterface.h  amqppublishnotifier.cpp  amqppublishnotifier.h  amqpsender.h
src/cc/: CCOracles.h  CCassetsCore.cpp  CCassetstx.cpp  CCcustom.cpp  CCinclude.h  CCtokens.cpp  CCtokenutils.cpp  CCtx.cpp  CCutilbits.cpp  CCutils.cpp  COptCCParams.cpp  Makefile_custom  assets.cpp  auction.cpp  betprotocol.cpp  betprotocol.h  cclib.cpp  channels.cpp  customcc.cpp  dice.cpp  dilithium.c  disputepayout.cpp  eval.cpp  eval.h  faucet.cpp  fsm.cpp  gamescc.cpp  gateways.cpp  heir.cpp  import.cpp  importgateway.cpp  importpayout.cpp  lotto.cpp  marmara.cpp  musig.cpp  oracles.cpp  payments.cpp  pegs.cpp  prices.cpp  rewards.cpp  (+3 more)
src/cc/crypto777/: OS_portable.h
src/cc/dapps/: dappstd.c
src/cc/rogue/: main.c
src/compat/: byteswap.h  endian.h  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: komodo-config.h
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  upgrades.cpp  upgrades.h  validation.h
src/crypto/: common.h  equihash.cpp  equihash.h  haraka.cpp  haraka.h  haraka_portable.cpp  haraka_portable.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  verus_hash.h
src/cryptoconditions/: configure.ac
src/cryptoconditions/include/: cryptoconditions.h
src/cryptoconditions/src/: anon.c  cc_secp256k1.c  cryptoconditions.c  cryptoconditions.cpp  cryptoconditions_utils.cpp  ed25519.c  eval.c  internal.h  json_rpc.c  prefix.c  preimage.c  secp256k1.c  threshold.c  utils.c
src/leveldb/: build_detect_platform
src/leveldb/db/: db_impl.cc  db_iter.cc  log_reader.cc  log_writer.h  repair.cc  skiplist.h  version_set.cc
src/leveldb/port/: port_posix.cc  port_win.h
src/leveldb/util/: env_win.cc
src/libevent/: event.c  evutil.c  log.c  util-internal.h
src/libsnark/common/: profiling.cpp
src/miniupnpc/: miniupnpcstrings.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/pow/tromp/: equi_miner.h
src/primitives/: block.cpp  block.h  block_komodo.cpp  nonce.cpp  nonce.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  editzaddressdialog.cpp  editzaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  komodo.cpp  komodo.qrc  komodoaddressvalidator.cpp  komodoaddressvalidator.h  komodoamountfield.cpp  komodoamountfield.h  komodoapp.cpp  komodooceangui.cpp  komodooceangui.h  komodostrings.cpp  komodounits.cpp  komodounits.h  macdockiconhandler.h  macdockiconhandler.mm  (+79 more)
src/qt/forms/: debugwindow.ui  editzaddressdialog.ui  optionsdialog.ui  overviewpage.ui  sendcoinsentry.ui  zaddressbookpage.ui  zsendcoinsdialog.ui
src/qt/locale/: komodo_af.qm  komodo_af.ts  komodo_af_ZA.qm  komodo_af_ZA.ts  komodo_ar.qm  komodo_ar.ts  komodo_be_BY.qm  komodo_be_BY.ts  komodo_bg.qm  komodo_bg.ts  komodo_bg_BG.qm  komodo_bg_BG.ts  komodo_ca.qm  komodo_ca.ts  komodo_ca@valencia.qm  komodo_ca@valencia.ts  komodo_ca_ES.qm  komodo_ca_ES.ts  komodo_cs.qm  komodo_cs.ts  komodo_cy.qm  komodo_cy.ts  komodo_da.qm  komodo_da.ts  komodo_de.qm  komodo_de.ts  komodo_el.qm  komodo_el.ts  komodo_el_GR.qm  komodo_el_GR.ts  komodo_en.qm  komodo_en.ts  komodo_en_GB.qm  (+136 more)
src/rpc/: blockchain.cpp  client.cpp  client.h  crosschain.cpp  mining.cpp  misc.cpp  net.cpp  net_rpc.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: cc.cpp  cc.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  script_ext.cpp  script_ext.h  serverchecker.cpp  serverchecker.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  zcashconsensus.cpp  zcashconsensus.h
src/support/: cleanse.cpp  cleanse.h  events.h  pagelocker.cpp  pagelocker.h
src/sys/: time.cpp
src/test-komodo/: test_addrman.cpp  test_events.cpp  test_haraka_removal.cpp  test_kmd_feat.cpp  test_merkle_tests.cpp  test_multisig_tests.cpp  test_netbase_tests.cpp  test_sha256_crypto.cpp  testutils.cpp
src/tui/: README.md
src/wallet/: asyncrpcoperation_mergetoaddress.cpp  asyncrpcoperation_mergetoaddress.h  asyncrpcoperation_sendmany.cpp  asyncrpcoperation_sendmany.h  asyncrpcoperation_shieldcoinbase.cpp  asyncrpcoperation_shieldcoinbase.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdisclosure.cpp  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_fees.cpp  wallet_fees.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/zcash/: Address.hpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  Note.cpp  NoteEncryption.cpp  Proof.cpp  prf.cpp  util_zcash.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+132 files in other folders)
